# FlexBOOST

./: .gitignore  README.md  pyproject.toml
FlexBook/: db.sqlite3  manage.py
FlexBook/FlexBook/: asgi.py  settings.py  urls.py  wsgi.py
FlexBook/Games/: admin.py  business_logic.py  models.py  views.py
FlexBook/Games/migrations/: 0001_initial.py  0002_remove_gamerankassociation_content_type_from_and_more.py
FlexBook/Messages/: admin.py  business_logic.py  models.py  views.py
FlexBook/Messages/migrations/: 0001_initial.py  0002_initial.py
FlexBook/News/: admin.py  models.py  views.py
FlexBook/News/migrations/: 0001_initial.py  0002_initial.py
FlexBook/Users/: admin.py  business_logic.py  forms.py  models.py  user_services.py  verification.py  views.py
FlexBook/Users/migrations/: 0001_initial.py  0002_alter_customuser_user_profile_pictures.py  0002_customuser_timezone.py
FlexBook/templates/: For_banned.html  Games_page.html  History_page.html  Main_Page.html  Main_Registration_Page.html  Messenger_page.html  News_page.html  Orders_page.html  Profile.html  Settings.html
